# cmake_learn

./: CMakeLists.txt
dylib/: CMakeLists.txt  dylib.cpp  dylib.h
src/: CMakeLists.txt  main.cpp
staticlib/: CMakeLists.txt  static.cpp  static.h
