cmake_minimum_required(VERSION 3.0)

MESSAGE("PATH = " $ENV{PATH})


MESSAGE(${CMAKE_SYSTEM})
MESSAGE(${CMAKE_SYSTEM_NAME})

IF(UNIX)
	MESSAGE("System - unix")
ENDIF()

IF(WIN32) 
	MESSAGE("System - win32")
ENDIF()

#EXEC_PROGRAM(ls ARGS "*.app" OUTPUT_VARIABLE LS_OUTPUT RETURN_VALUE LS_RVALUE)

#MESSAGE(${LS_OUTPUT} ${LS_RVALUE})

#FIND_FILE(LIBX HelloCMake ./bin/Debug)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(staticlib)
ADD_SUBDIRECTORY(dylib)